--- a/src/app/cards/cards.page.html
+++ b/src/app/cards/cards.page.html
@@ -1,6 +1,8 @@
 <ion-header no-border>  
   <ion-toolbar>
-    <ion-back-button></ion-back-button>
+    <ion-buttons slot="start">
+      <ion-back-button></ion-back-button>
+    </ion-buttons>
     <ion-title>{{ deck?.name }}</ion-title>
     <ion-buttons slot="end">
       <ion-button (click)="showNewCard()">
