--- a/src/app/create-notification/create-notification.page.html
+++ b/src/app/create-notification/create-notification.page.html
@@ -1,6 +1,8 @@
 <ion-header no-border>  
     <ion-toolbar>
+      <ion-buttons slot="start">
         <ion-back-button></ion-back-button>
+      </ion-buttons>
   
       <ion-title>
           Create Notification
