--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -1,6 +1,8 @@
 <ion-header no-border>  
   <ion-toolbar>
+    <ion-buttons slot="start">
       <ion-back-button></ion-back-button>
+    </ion-buttons>
 
     <ion-title>
       N-of-1
