change to 24hr clock

--- a/src/app/create-notification/create-notification.page.html
+++ b/src/app/create-notification/create-notification.page.html
@@ -16,7 +16,7 @@
       </ion-item>
       <ion-item>
       <ion-label>{{ "Click to set notification time"}}</ion-label>
-      <ion-datetime [(ngModel)]="myDate" [pickerOptions]="customPickerOptions" displayFormat="h:mm a" ></ion-datetime>
+      <ion-datetime [(ngModel)]="myDate" [pickerOptions]="customPickerOptions" displayFormat="HH:mm" ></ion-datetime>
     </ion-item>
     <ion-item>
     <ion-button (click)="toggle()">Create Notification</ion-button >
